crates/rome_cli/tests/snapshots/main_commands_init/creates_config_file_when_rome_installed_via_package_manager.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "$schema": "./node_modules/rome/configuration_schema.json",
  "organizeImports": {
    "enabled": true
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  }
}
```

## `./node_modules/rome/configuration_schema.json`

```json
{}
```

# Emitted Messages

```block

Welcome to Biome! Let's get you started...

Files created ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  - rome.json: Your project configuration. Documentation: https://rome.tools/configuration

Next Steps ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  1. Setup an editor extension
     Get live errors as you type and format when you save. Learn more: https://rome.tools/editors

  2. Try a command
     rome ci checks for lint errors and verifies formatting. Run rome --help for a full list of commands and options.

  3. Read the documentation
     Our website serves as a comprehensive source of guides and documentation: https://docs.rome.tools

  4. Get involved in the community
     Ask questions, get support, or contribute by participating on GitHub (https://github.com/rome/tools),
     or join our community Discord (https://discord.gg/rome)
```


