crates/rome_cli/tests/snapshots/main_commands_init/init_help.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Bootstraps a new biome project. Creates a configuration file with some defaults.

Usage: init 

Available options:
    -h, --help  Prints help information

```


